--- a/chatbot-frontend/package.json
+++ b/chatbot-frontend/package.json
@@ -6,6 +6,7 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "axios": "^1.7.9",
+    "chatbot-frontend": "file:",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
